Name:                   orgmode-parse
Version:                0.2.1
Author:                 Parnell Springmeyer <parnell@digitalmentat.com>
Maintainer:             Parnell Springmeyer <parnell@digitalmentat.com>
License:                BSD3
License-File:           LICENSE
bug-reports:            https://github.com/ixmatus/orgmode-parse/issues
Category:               Data
Synopsis:               A collection of Attoparsec combinators for parsing org-mode
                        flavored documents.
Description:

  <<https://travis-ci.org/ixmatus/orgmode-parse.svg?branch=master>>
  .
  `orgmode-parse` is a parsing library for the org-mode flavor of
  document markup.
  .
  The provided Attoparsec combinators parse the human-readable and
  textual representation into a simple AST for storage or output to
  another format (HTML? Markdown?).

Cabal-Version:          >= 1.10
Build-Type:             Simple

Extra-Source-Files:
    LICENSE
    CHANGELOG.md
    README.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  Ghc-options:
                 -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-orphans -fno-warn-unused-do-bind

  Exposed-Modules:
                  Data.OrgMode.Parse,
                  Data.OrgMode.Parse.Attoparsec.Document,
                  Data.OrgMode.Parse.Attoparsec.Headline,
                  Data.OrgMode.Parse.Attoparsec.Drawer,
                  Data.OrgMode.Parse.Attoparsec.Drawer.Logbook,
                  Data.OrgMode.Parse.Attoparsec.Drawer.Property,
                  Data.OrgMode.Parse.Attoparsec.Drawer.Generic,
                  Data.OrgMode.Parse.Attoparsec.Section,
                  Data.OrgMode.Parse.Attoparsec.Time,
                  Data.OrgMode.Parse.Attoparsec.Util,
                  Data.OrgMode.Types

  Build-Depends:
                base                      >= 4.8      && < 5
              , aeson                     >= 0.11
              , attoparsec                >= 0.13
              , bytestring                >= 0.10.4
              , containers                >= 0.5.6
              , free                      >= 4.9
              , hashable                  >= 1.2
              , old-locale                >= 1.0
              , text                      >= 1.2
              , thyme                     >= 0.3
              , unordered-containers      >= 0.2.7

Test-Suite tests
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test, src
  Ghc-Options:          -Wall
  Main-Is:              Test.hs
  Other-Modules:
                Document,
                Headline,
                Drawer,
                Timestamps,
                Util,
                Weekdays

  Build-Depends:
                base                      >= 4.8      && < 5
              , orgmode-parse
              , aeson                     >= 0.11
              , attoparsec                >= 0.13
              , bytestring                >= 0.10.4
              , containers                >= 0.5.6
              , free                      >= 4.9
              , hashable                  >= 1.2
              , old-locale                >= 1.0
              , text                      >= 1.2
              , thyme                     >= 0.3
              , unordered-containers      >= 0.2.7
              , HUnit                     >= 1.3
              , tasty                     >= 0.11
              , tasty-hunit               >= 0.9
              , neat-interpolation        >= 0.3

Source-Repository head
  Type:                 git
  Location:             https://github.com/digitalmentat/orgmode-parse
