name:               orgmode-parse
version:            0.3.1
author:             Parnell Springmeyer <parnell@digitalmentat.com>
maintainer:         Parnell Springmeyer <parnell@digitalmentat.com>
license:            BSD3
license-file:       LICENSE
bug-reports:        https://github.com/ixmatus/orgmode-parse/issues
category:           Data
synopsis:
  A collection of Attoparsec combinators for parsing org-mode
  flavored documents.

description:
  <<https://travis-ci.org/ixmatus/orgmode-parse.svg?branch=master>>
  .
  `orgmode-parse` is a parsing library for the org-mode flavor of
  document markup.
  .
  The provided Attoparsec combinators parse the human-readable and
  textual representation into a simple AST.

cabal-version:      >=1.10
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall -Werror -fwarn-tabs -funbox-strict-fields -fno-warn-orphans
    -fno-warn-unused-do-bind

  exposed-modules:
    Data.OrgMode.Parse
    Data.OrgMode.Parse.Attoparsec.Constants
    Data.OrgMode.Parse.Attoparsec.Content
    Data.OrgMode.Parse.Attoparsec.Content.List
    Data.OrgMode.Parse.Attoparsec.Content.Markup
    Data.OrgMode.Parse.Attoparsec.Content.Paragraph
    Data.OrgMode.Parse.Attoparsec.Document
    Data.OrgMode.Parse.Attoparsec.Drawer
    Data.OrgMode.Parse.Attoparsec.Drawer.Generic
    Data.OrgMode.Parse.Attoparsec.Drawer.Logbook
    Data.OrgMode.Parse.Attoparsec.Drawer.Property
    Data.OrgMode.Parse.Attoparsec.Headline
    Data.OrgMode.Parse.Attoparsec.Section
    Data.OrgMode.Parse.Attoparsec.Time
    Data.OrgMode.Parse.Attoparsec.Util
    Data.OrgMode.Parse.Attoparsec.Util.ParseLinesTill
    Data.OrgMode.Types

  build-depends:
      aeson                      >=1.0
    , attoparsec                 >=0.13
    , base                       >=4.8     && <5
    , bytestring                 >=0.10.4
    , containers                 >=0.5.6
    , free                       >=4.9
    , hashable                   >=1.2
    , insert-ordered-containers  >=0.2.0.0
    , old-locale                 >=1.0
    , semigroups
    , text                       >=1.2
    , thyme                      >=0.3
    , time                       >=1.12.2
    , unordered-containers       >=0.2.7

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:
    -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-orphans
    -fno-warn-unused-do-bind -fbreak-on-error

  main-is:          Test.hs
  other-modules:
    Content.Contents
    Content.List
    Content.Paragraph
    Document
    Drawer
    Headline
    Timestamps
    Util
    Util.Builder
    Weekdays

  build-depends:
      aeson                      >=1.0
    , attoparsec                 >=0.13
    , base                       >=4.8     && <5
    , bytestring                 >=0.10.4
    , containers                 >=0.5.6
    , free                       >=4.9
    , hashable                   >=1.2
    , HUnit                      >=1.3
    , insert-ordered-containers  >=0.2.0.0
    , neat-interpolation         >=0.3
    , old-locale                 >=1.0
    , orgmode-parse
    , semigroups
    , tasty                      >=0.11
    , tasty-hunit                >=0.9
    , text                       >=1.2
    , thyme                      >=0.3
    , time                       >=1.12.2
    , unordered-containers       >=0.2.7

source-repository head
  type:     git
  location: https://github.com/digitalmentat/orgmode-parse
