Name:                   structmsg
Version:                0.0.0.1
Author:                 Parnell <parnell@digitalmentat.com>
Maintainer:             Parnell <parnell@digitalmentat.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               A parser and writer for org-mode flavored documents.
Description:

  `structmsg` is a parsing and writing library for the org-mode flavor
  of document markup.
  .
  This library parses the human-readable and textual representation
  into an AST that can be used for output to another format (HTML?
  Markdown?), binary serialized for storage, etc...

Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  Ghc-options:
    -Wall -fwarn-tabs -funbox-strict-fields -fno-warn-orphans -fno-warn-unused-do-bind

  Exposed-Modules:      Data.StructMsg
  Other-Modules:        Data.StructMsg.Internal

  Build-Depends:
    base                      >= 4.4      && < 5,
    attoparsec                >= 0.12     && < 0.13,
    free                      >= 4.9      && < 5,
    text                      >= 1.0      && < 2.0

Source-Repository head
  Type:                 git
  Location:             git@github.com:digitalmentat/structmsg-hs.git
